# OnlyPump-RS

./: .gitignore  BEFORE_YOU_PUSH.md  Cargo.toml  ENVIRONMENT_VARIABLES.md  NETLIFY_DEPLOYMENT.md  NETLIFY_QUICKSTART.md  README.md  VANITY_GENERATION.md  build-wasm.sh  consolidate-addresses.js  env.example  netlify.toml  start_all.sh  start_backend.sh  test_api.sh  test_integration.md  test_pump.json
FE/: .gitignore  README.md  frontend_integration.md  index.html  package.json  tailwind.config.ts  test.buy.js
FE/src/: App.tsx  config.ts  index.css
FE/src/contexts/: OnlypumpAuthContext.tsx  UserRoleContext.tsx  WaitlistModalContext.tsx  WalletProvider.tsx
FE/src/pages/: Auth.tsx  BogdanProfile.tsx  ClubDetail.tsx  CreatorClubs.tsx  CreatorPortfolio.tsx  CreatorProfile.tsx  Dashboard.tsx  Explore.tsx  ForCreators.tsx  ForFans.tsx  Index.tsx  LaunchServices.tsx  Live.tsx  PhantomGuide.tsx  PresaleCreate.tsx  Privacy.tsx  Risk.tsx  TalentDashboard.tsx  TalentDetail.tsx  TalentSignup.tsx  Talents.tsx  Terms.tsx  TransactionsDemo.tsx
FE/src/types/: talent.ts
FE/src/utils/: authSignature.ts
FE/supabase/: config.toml
FE/supabase/migrations/: 20251007191907_f8bd0c50-b656-406f-a971-4d9d64ddbf70.sql  20251013130809_1c25c8dd-289d-4726-865c-be950987a270.sql  20251013131028_0bc47fcc-5d5b-4cb1-8bfb-7d5f2786da4c.sql  20251013175225_c1def362-a437-4797-bcc8-1930d950a3a1.sql  20251013202444_7d95219d-45be-4fb4-a47b-5097a02a5ea4.sql  (+6 more)
frontend/: README.md  env.example  next.config.js  package.json  start_frontend.sh  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CreatedTokensList.tsx  Footer.tsx  Navbar.tsx  Notification.tsx  NotificationContainer.tsx  PageLayout.tsx  ReduxStateDebug.tsx  Sidebar.tsx  TransactionHistory.tsx  WalletContextProvider.tsx  WalletDebug.tsx
frontend/public/: test_pump.json
frontend/types/: bn.js.d.ts
src/: main.rs  vanity.rs
wasm-vanity/: Cargo.toml  build.sh
wasm-vanity/src/: lib.rs
(+36 files in other folders)
