[package]
name = "onlypump-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pump.fun SDK
pumpfun = { version = "4.6.0", features = ["stream"] }

# Web framework
axum = { version = "0.7", features = ["macros", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Solana
solana-sdk = "2.3"
solana-client = "2.3"
spl-token = "8.0"
spl-associated-token-account = "7.0"

# Vanity generation
rayon = "1.8"
rand = "0.8"
bs58 = "0.5"

# Environment
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async utilities
futures = "0.3"

# Base64 encoding
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Fast parallel processing
crossbeam-channel = "0.5"


