[package]
name = "wasm-vanity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Event",
  "EventTarget",
  "KeyboardEvent",
  "MouseEvent",
] }
# Note: Solana and Pump.fun dependencies removed for WASM compatibility
# These will be handled by the backend API calls

# Utilities
bs58 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
base64 = "0.22"

# Force getrandom version to avoid conflicts
[patch.crates-io]
getrandom = { version = "0.2", features = ["js"] }
